[package]
name = "cadence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
color-eyre = { "0.6.2", default-features = false }
tokio = { version = "1.36.0", features = ["full"] }
libnotify = "1.0.3"
clap = { version = "4.5.1", features = ["derive"] }
