[package]
name = "caydence"
version = "0.1.0"
edition = "2021"
authors = ["Josh Brown"]
description = "a wallpaper switching utility with pomodoro capabilities"
readme = "README.md"
repository = "https://github.com/joshcbrown/caydence"
license = "MIT"
keywords = ["wallpaper", "swww", "command-line"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
color-eyre = { version = "0.6.2", default-features = false }
tokio = { version = "1.36.0", features = ["full"] }
libnotify = "1.0.3"
clap = { version = "4.5.1", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
